🎉 프리셋 기능 & 공유 기능 대폭 업그레이드!
✨ 새로운 프리셋 기능:
- 💕 커플 D-day (100일, 1주년 등 마일스톤 하이라이트)
- 👶 아기 관련 (백일, 돌 등 특별한 날 강조)
- 🎖️ 전역일 계산 (군인 전용 모드)
- 📚 시험/입시일 (D-day 스타일)
- 🎂 기념일 계산
- 💼 프로젝트 마감일

🎯 특별한 날 하이라이트:
- 골드 그라데이션으로 의미있는 날짜 강조
- 커플: 100일, 200일, 500일, 1000일, 1주년, 2주년 등
- 아기: 백일, 돌, 두 돌

📤 공유 기능:
- 🔗 링크 복사 (클립보드 자동 복사)
- 💬 카카오톡 공유
- 💾 결과 이미지 저장 (Canvas로 예쁜 이미지 생성)

🎨 UX 개선:
- 프리셋별 동적 라벨 변경 (시작일 → 사귀기 시작한 날)
- 맞춤형 버튼 텍스트 (계산하기 → 사랑의 날수 계산하기 💕)
- 프리셋별 특화된 결과 메시지와 이모지
- 계산 후 자동 공유 버튼 표시
- 향상된 모바일 터치 효과

--- a/index.html
+++ b/index.html
@@ -107,13 +107,27 @@
       <h1>📅 날짜 차이 계산기</h1>
       <p class="subtitle">두 날짜를 선택하고 차이를 확인하세요.</p>
 
+      <!-- 프리셋 선택 -->
+      <div class="preset-section">
+        <label for="presetSelect" class="preset-label">계산 유형 선택</label>
+        <select id="presetSelect" class="preset-select">
+          <option value="general">📊 일반 날짜 계산</option>
+          <option value="couple">💕 커플 D-day</option>
+          <option value="baby">👶 아기 관련</option>
+          <option value="military">🎖️ 전역일 계산</option>
+          <option value="exam">📚 시험/입시일</option>
+          <option value="anniversary">🎂 기념일</option>
+          <option value="project">💼 프로젝트 마감</option>
+        </select>
+      </div>
+
       <div class="date-picker">
         <div class="date-input">
-          <label for="startDate">시작일</label>
+          <label for="startDate" id="startLabel">시작일</label>
           <input type="date" id="startDate" />
         </div>
         <div class="date-input">
-          <label for="endDate">종료일</label>
+          <label for="endDate" id="endLabel">종료일</label>
           <input type="date" id="endDate" />
         </div>
       </div>
@@ -121,6 +135,13 @@
       <button id="calculateBtn">계산하기</button>
 
       <div id="result" class="result-box"></div>
+
+      <!-- 공유 버튼들 -->
+      <div id="shareButtons" class="share-buttons" style="display: none">
+        <button id="copyLinkBtn" class="share-btn">🔗 링크 복사</button>
+        <button id="shareKakaoBtn" class="share-btn">💬 카카오톡</button>
+        <button id="saveResultBtn" class="share-btn">💾 결과 저장</button>
+      </div>
     </main>
 
     <footer>
