📤 공유 기능 대폭 개선! Web Share API 적용
🔧 카카오톡 공유 에러 해결:
- 기존: 작동하지 않는 kakao sharer URL 사용
- 개선: Web Share API로 네이티브 공유 지원

✨ 새로운 공유 방식:
- 📱 모바일: Web Share API로 모든 앱 공유 가능
  (카카오톡, 텔레그램, 메시지, 이메일 등)
- 💻 데스크톱: 결과+링크 자동 복사
- 🔄 Fallback: API 미지원 시 수동 복사

🎯 사용자 경험 개선:
- 버튼명: '💬 카카오톡' → '📤 공유하기'
- 명확한 안내 메시지
- 다단계 fallback으로 모든 환경에서 작동

💡 작동 방식:
1. Web Share API 시도 (모바일 우선)
2. 실패 시 클립보드 복사
3. 최종 실패 시 수동 복사 안내

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <!-- 공유 버튼들 -->
       <div id="shareButtons" class="share-buttons" style="display: none">
         <button id="copyLinkBtn" class="share-btn">🔗 링크 복사</button>
-        <button id="shareKakaoBtn" class="share-btn">💬 카카오톡</button>
+        <button id="shareKakaoBtn" class="share-btn">📤 공유하기</button>
         <button id="saveResultBtn" class="share-btn">💾 결과 저장</button>
       </div>
     </main>
