다크모드 지원

--- a/index.html
+++ b/index.html
@@ -104,7 +104,16 @@
   </head>
   <body>
     <main class="container">
-      <h1>📅 날짜 차이 계산기</h1>
+      <div class="header-section">
+        <h1>📅 날짜 차이 계산기</h1>
+        <button
+          id="themeToggle"
+          class="theme-toggle"
+          aria-label="다크모드 토글"
+        >
+          <span class="theme-icon">🌙</span>
+        </button>
+      </div>
       <p class="subtitle">두 날짜를 선택하고 차이를 확인하세요.</p>
 
       <!-- 프리셋 선택 -->
